--- a/fashion.html
+++ b/fashion.html
@@ -63,7 +63,7 @@
             <div class="container">
                <div class="row">
                   <div class="col-sm-12">
-                     <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
+                      <span class="toggle_icon" onclick="openNav()"><h2>Botirov Charos online shop</h2></span>
                   </div>
                </div>
             </div>
@@ -329,14 +329,14 @@
                   <li><a href="#">Customer Service</a></li>
                </ul>
             </div>
-            <div class="location_main">Help Line  Number : <a href="#">+1 1800 1200 1200</a></div>
+            <div class="location_main">Help Line  Number : <a href="#">+998933016999</a></div>
          </div>
       </div>
       <!-- footer section end -->
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">© 2020 All Rights Reserved. Design by <a href="https://html.design">Free html  Templates</a></p>
+            <p class="copyright_text">© 2023-yil 7-aprel Botirova Charos</p>
          </div>
       </div>
       <!-- copyright section end -->
