--- a/electronic.html
+++ b/electronic.html
@@ -63,7 +63,7 @@
             <div class="container">
                <div class="row">
                   <div class="col-sm-12">
-                      <span class="toggle_icon" onclick="openNav()"><h2>Botirov Charos online shop</h2></span>
+                     <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
                   </div>
                </div>
             </div>
